# mei-hua

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  flake.nix  nob.c  nobuild.sh
build_system/: macos_build_util.h
dependecies/SDL3/: NOTE.MD
dependecies/WebGPU/: NOTE.MD
include/: app.h  module.h
include/core/: app.h  module.h  schedules.h
include/modules/: default_modules.h
include/modules/example/: example.h
include/modules/renderer/: renderer.h
include/modules/renderer/window/: window.h
src/: main.c  renderer.h
src/core/: app.c  module.c
src/modules/: default_modules.c
src/modules/example/: example.c
src/modules/renderer/: renderer.c  renderer.h  webgpu.c  webgpu.h
src/modules/renderer/window/: glfw.c  glfw.h  sdl.c  sdl.h  window.c  window.h
src/platform/macos/: objc_dummy.m
src/renderer/: renderer.h
